just need to fix one svg spacing

--- a/_sass/components/partners/_partners.scss
+++ b/_sass/components/partners/_partners.scss
@@ -15,6 +15,9 @@
 
 .partners-body {
     line-height: 1.5em;
+    h4 {
+        font-size: 1.125em;
+    }
 }
 
 .external-link {
